k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rps-game
  labels:
    app.kubernetes.io/part-of: playhub-demo-game
    playhub.io/game: rock-paper-scissors
